# caramel-board

./: .dockerignore  .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  THIRD_PARTY_NOTICES.md  backup.bat  biome.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  serve.bat  serve.sh  setup-channel.bat  setup.bak.sh  setup.bat  setup.md  setup.sh  stop.bat  turbo.json  update.bat
.github/workflows/: ci.yml  desktop-package.yml  release-discord-notification.yml
agent-actions/: apply-readme.md
apps/chrome-extension/: package.json  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: domain.rs  lib.rs  main.rs  settings.rs  tray.rs
apps/desktop/src-tauri/src/features/: autotag.rs  data_store.rs  docker_migration.rs  ffmpeg.rs  sidecar.rs  standalone_migration.rs
apps/desktop/src-tauri/src/platform/: process.rs  resources.rs
apps/desktop/src-tauri/wix/: main.wxs
docs/: browser-extension-privacy-policy.md  browser-extension.md  cli-installation.md  desktop-packaging.md  desktop-tools-macos.md  desktop-tools-windows.md  docker-to-desktop-migration.md  installation-macos.md  installation-windows.md  pdf-import.md  standalone-migration.md  standalone-tauri.md
notes/: api-inventory.md
scripts/: dev-client-vite.mjs  dev-client.mjs  dev-desktop.mjs  dev-server.mjs  npm-runner.mjs  sync-version.mjs  update-icons.mjs
(+740 files in other folders)
